# team-deadlock

./: Makefile  README.md  team_deadlock_powerpoint.pptx
backend/: alembic.ini  pyproject.toml
backend/db/: Dockerfile
backend/docker/: Dockerfile
backend/migrations/: env.py
backend/migrations/versions/: 2025-02-26-10-42_850fa2f6bbe5.py  2025-02-28-21-46_60a9fc507e0b.py
backend/src/: __main__.py  gunicorn_runner.py
backend/src/articles/: crud.py  models.py  router.py  schema.py
backend/src/core/: application.py  domain.py  lifetime.py  schema.py  settings.py
backend/src/core/db/: declaration.py  session.py  utils.py
backend/src/embeddings/: crud.py  models.py  router.py
docker/: docker-compose.yml
frontend/: index.html  script.js  styles.css
frontend/caddy/: Caddyfile
frontend/docker/: Dockerfile
